assets/static/css/content.css
/* css rules for the bbcode content that is converted into HTML */

/* numbers, round brackets, square brackets, curly brackets */
@font-face {
  font-family: 'Times New Roman Quotation';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: local('Times New Roman');
  unicode-range: U+30-39, U+28-29, U+5B, U+5D, U+7B, U+7D;
}


/* [quote]...[/quote] */
blockquote {
  background: #f9f9f9;
  border-left: 10px solid #ccc;
  margin-top: 0.7em;
  margin-bottom: -5px;
  margin-left: 10px;
  margin-right: 10px;
  padding: 0.5em 10px;
  quotes: "\201C""\201D""\2018""\2019";
  font-style: italic;
  text-align: justify;
  font-family: 'Times New Roman Quotation', 'Times New Roman';
}
blockquote:before {
  color: #ccc;
  content: '';
  font-size: 4em;
  line-height: 0.1em;
  vertical-align: -0.4em;
}

/* [center]...[/center] */
.center-paragraph {
  text-align: center;
}

/* [ind]...[/ind] */
.indent-paragraph {
  /* directly from hypercard */
  margin: 1em 0 1em 40px;
}

/* [ovl]...[/ovl] */
.overline {
  text-decoration: overline;
}

/* [sub]...[/sub] */
.subscript {
  vertical-align: sub;
}

/* [sup]...[/sup] */
.superscript {
  vertical-align: super;
}

/* [gl]...[/gl] */
.gllink {
  color: green;
}

/* [ac]...[/ac] */
.aclink {
  color: brown;
}

/* [big]...[/big] */
.bigger {
  font-size: larger;
}

/* [small]...[/small] */
.smaller {
  font-size: smaller;
}

/* [t]...[/t] */
.translation {
  color: red !important;
  cursor: pointer;
}

.katex {
  font-size: 1em !important;
}

.blue-block {
  background-color: #ccffff;
  padding: 10px;
}

.grey-block {
  background-color: #cccccc;
  padding: 10px;
}

table {
  width: 100%;
}

.math-error {
  color: red;
}

.red-text {
  color: red;
}
.blue-text {
  color: blue;
}
.green-text {
  color: green;
}
.brown-text {
  color: brown;
}

